Tiny spacing fix

--- a/static/style.scss
+++ b/static/style.scss
@@ -62,7 +62,7 @@ header {
 }
 
 h1.img-header {
-  margin: 15px auto 30px auto;
+  margin: 0 auto 30px auto;
   padding: 200px 0 15px 0;
   background-size: cover;
   background-position: bottom;
